# Laba6

./: CMakeLists.txt  Laba6.cpp
include/: Article.h  Horoscope.h  Newspapper.h  Prediction.h  PrintedEdition.h  PublisherHouse.h  ScientificJournal.h  funcs.h
src/: Article.cpp  Horoscope.cpp  Newspapper.cpp  Prediction.cpp  PrintedEdition.cpp  PublisherHouse.cpp  ScientificJournal.cpp  funcs.cpp
